# iks

./: .gitignore  Dotfiles  README.md  Stow  Vim  clean__root_dir_cleanup__item.sh  install_me.sh  pyproject.toml  run_me.sh  tmp__TMP__item.sh
iks/: iks.py
iks/services/: __init__.py  global_context.py  menu.py
iks/tests/: test_0.py
menu/: db__db_pass__item.sh  xr__aws-azure-login__item.sh
menu/0__go_to__item/: bin__manage-the-BIN_scripts__item.sh  howto__HowTos__item.sh  menu__manage-the-Menu__item.sh
menu/alias__bash_aliases__item/: .e__edit_bash_aliases__item.sh.swp  .p_push_bash_aliases__item.sh.swp  bash_aliases  e__edit_bash_aliases__item.sh  p__push_bash_aliases__item.sh
menu/cde__cde__item/: k9s__k9s__item.sh  ps__ps__item.sh  set_INT__set_INT_env_on_CDE__item.sh  set_PROD__set_PROD_env_on_CDE__item.sh  top__top__item.sh
menu/cde__cde__item/install__prepare_new_cde_vm__item/: 1.rdbs__Install_RDBS__item.sh  2.k9s__Install_k9s__item.sh
menu/jupi__jupyter__item/: list__list_running_jupiter_servers__item.sh  st2__stop_jupiter_server_running_on_other_port__item.sh  start__jupiter_notebook_start__item.sh  stop__stop_8888_running_jupiter_server__item.sh
menu/mac__mac__item/: .ssh__edit ssh config__item.sh.swp  backup__backup__item.sh  ssh__edit_mac_ssh_config__item.sh
src/python/: iks.py
src/python/libki/: global_context.py  menu.py
src/python/simple_menu/: __init__.py  menu.py
src/python/tests/: test_0.py
use_case/.iks/: list__list__item.sh
use_case/.iks/0__go_to__item/: menu__manage-the-Menu__item.sh
use_case/scripts/: iks
