[tool.poetry]
name = "iks"
version = "0.1.0"
description = "Quick and Simple Menu system"
authors = ["ka-r-ol <karol.lemanski@wp.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
