[tool.poetry]
name = "iks"
version = "0.1.0"
description = "Quick and Simple Menu system"
authors = ["ka-r-ol <karol.lemanski@wp.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
ruff = "^0.1.6"
black = "^23.11.0"
mypy = "^1.7.0"

# [tool.black]
# line-length = 88
pynvim = "^0.4.3"
neovim = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
